tests/ast_bad_mutref_slice_type.stderr
tests/ast_bad_mutref_slice_type.sl:19:20: error: expected type
