tests/ast_bad_mutref_slice_type.sl
fn main(a mut&[i32]) i32 {
    return 0
}
